# simple-grapher

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple-grapher
examples/: auto_cycling_demo.yaml  basic_config.yaml  default_styling.yaml  manual_styling_demo.yaml  minimal_yaml.yaml  run_examples.py  scatter_defaults.yaml  scatter_markers_demo.yaml
scripts/: format_code.sh  run_tests.sh
simple_grapher/: __init__.py  cli.py
simple_grapher/core/: __init__.py  config.py  data_processor.py  graph_builder.py
simple_grapher/utils/: __init__.py  helpers.py  yaml_parser.py
tests/: __init__.py  test_cli.py  test_config.py  test_core.py  test_yaml_parser.py
